--- a/bio/index.html
+++ b/bio/index.html
@@ -50,7 +50,7 @@
 
                     <section class="enter_and_leave paragraph_limit">
                         <h2>All I ever wanted to do was build a happier world for people...</h2>
-                        <p>So, I made a career out of a passion to drive business success by designing delightful user experience for products. This is my whole story...</p>
+                        <p>So, I made a career out of a passion to drive business success by designing delightful user experience for products. My whole story...</p>
                     </section>
                 
                 </section>
@@ -68,10 +68,12 @@
 
         <section class="case_section7">
 
-            <section class="case_titles">
-                <p>Meet Claire</p>
+            <section id="image_mock" class="slide5">
+                <section></section>
+                <section></section>
+                <section></section>
             </section>
-
+            
             <section class="bio_sections">
                 <section class="text5">
                     <h3>UI/UX Design Geek • Figma Fanatic • Human-Centered Design Advocate</h3>
@@ -148,6 +150,12 @@
                     <p>I literally obsess over accessibility, responsive design using the Figma auto-layouts, reusable UI assets, organized design system and hand-off best practices, UI design best-practices for speed and efficiency and all things user psychology.</p>
                     <p>It would be a delight to discuss your vision of a product and user experience</p>
                 </section>
+            </section>
+
+            <section id="image_mock1" class="slide5">
+                <section></section>
+                <section></section>
+                <section></section>
             </section>
 
             <section>
